--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "koa-router": "^7.4.0",
         "koa-session": "^5.8.3",
         "koa-static": "^5.0.0",
+        "koa2-cors": "^2.0.6",
         "mysql": "^2.16.0"
     }
 }
