--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
         "koa2-cors": "^2.0.6",
-        "mysql": "^2.16.0"
+        "mysql": "^2.16.0",
+        "xss": "^1.0.3"
     }
 }
