--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "koa-static": "^5.0.0",
         "koa2-cors": "^2.0.6",
         "mysql": "^2.16.0",
+        "node-schedule": "^1.3.1",
         "request-ip": "^2.1.3",
         "xss": "^1.0.3"
     }
