--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "blueimp-md5": "^2.16.0",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.12.0",
         "koa-body": "^4.1.3",
         "koa-router": "^8.0.8",
         "koa-static": "^5.0.0",
         "koa2-cors": "^2.0.6",
-        "md5.js": "^1.3.5",
         "mysql": "^2.18.1",
         "request": "^2.88.2",
         "request-ip": "^2.1.3",
